refactor: update PDF handling and improve error management in document processing